Add link to CalcBoost privacy policy on CalcBoost page

--- a/pages/calcboost.html
+++ b/pages/calcboost.html
@@ -11,7 +11,7 @@
 		/>
 		<link rel="stylesheet" href="../assets/global.css" />
 		<style>
-			.coming-soon-container {
+			.privacy-policy-container {
 				display: flex;
 				flex-direction: column;
 				align-items: center;
@@ -52,8 +52,10 @@
 			>
 		</nav>
 		<div class="content">
-			<div class="coming-soon-container">
-				<h1><i class="far fa-hourglass"></i> Coming soon...</h1>
+			<div class="privacy-policy-container">
+				<button onclick="window.location.href='calcboost/privacy_policy.html'">
+					Privacy policy
+				</button>
 			</div>
 		</div>
 		<footer class="copyright-statement">
