Update email address in contact section

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 				anything else you may want to discuss.
 			</p>
 			<button
-				onclick="window.open('mailto:michaelandrews.dev@gmail.com', '_blank')"
-				aria-label="send email to michaelandrews.dev@gmail.com"
+				onclick="window.open('mailto:me@michaelandrews.dev', '_blank')"
+				aria-label="send email to me@michaelandrews.dev"
 			>
 				<div class="email-button">
 					<svg
@@ -104,7 +104,7 @@
 							d="M20,8L12,13L4,8V6L12,11L20,6M20,4H4C2.89,4 2,4.89 2,6V18A2,2 0 0,0 4,20H20A2,2 0 0,0 22,18V6C22,4.89 21.1,4 20,4Z"
 						/>
 					</svg>
-					michaelandrews.dev@gmail.com
+					me@michaelandrews.dev
 				</div>
 			</button>
 		</div>
