--- a/pages/calcboost.html
+++ b/pages/calcboost.html
@@ -4,6 +4,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="theme-color" content="hsl(207, 90%, 77%)" />
 		<title>Michael Andrews - CalcBoost</title>
+		<link rel="shortcut icon" href="../assets/favicon.ico" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
