Update welcome header

--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
 				title="profile picture"
 			/>
 			<p>
-				Hi! I'm Michael. I am a junior at Iowa State University studying
-				software engineering. I enjoy learning about and working with modern
-				development technologies, and I have a strong interest in frontend and
-				full-stack development for web and mobile environments. During the
-				summer of 2021, I will be working as a software engineer intern for
+				Hi! I'm Michael. I am a software engineer intern for
 				<a class="link" href="https://www.workiva.com/">Workiva, Inc.</a>
+				and a senior software engineering student at Iowa State University next
+				fall. I enjoy working with modern development technologies and I have a
+				strong interest in frontend and full-stack software development for web
+				and mobile environments.
 			</p>
 			<br />
 			<h2 id="connect">Connect</h2>
