--- a/index.html
+++ b/index.html
@@ -60,10 +60,9 @@
         title="profile picture"
       />
       <p>
-        Hi! I'm Michael. I am a software engineer intern for
+        Hi! I'm Michael. I am a software engineer for
         <a class="link" href="https://www.workiva.com/">Workiva, Inc.</a>
-        and a senior software engineering student at Iowa State University. I
-        enjoy working with modern development technologies and I have a strong
+        I enjoy working with modern development technologies and I have a strong
         interest in full-stack software development for web and mobile
         environments.
       </p>
