UPDATE: CR and Styling

--- a/404.html
+++ b/404.html
@@ -5,9 +5,9 @@
     <meta name="theme-color" content="hsl(365, 90%, 74%)" />
     <title>Michael Andrews - 404</title>
     <link rel="shortcut icon" href="assets/favicon.ico" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="assets/global.css" />
@@ -59,7 +59,7 @@
       </div>
     </div>
     <footer class="copyright-statement">
-      <p>Copyright © 2021 Michael Andrews.</p>
+      <p>Copyright © 2023 Michael Andrews.</p>
       <a class="link" href="pages/privacy_policy.html">Privacy Policy</a>
     </footer>
   </body>
